syntax = "proto3";

package goproto.protoc.proto3;

option go_package = "./pb";

enum MsgType {
    MSG_UNKNOWN = 0;
    MSG_LOGIN_REQ = 2001;
    MSG_LOGIN_RES = 2002;
}

message LoginReq {
    uint32 user_id = 1;
}

message LoginRes {
    uint32 user_id = 1;
    bool result = 2;
}